--- a/RateMyDress/res/layout/activity_main.xml
+++ b/RateMyDress/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
     <Button
         style="@style/options_button2"
         android:background="@drawable/blue_button"
-        android:id="@+id/button4"
+        android:id="@+id/notifications"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
