--- a/RateMyDress/res/layout/activity_main.xml
+++ b/RateMyDress/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
     <Button
         style="@style/options_button2"
         android:background="@drawable/blue_button"
-        android:id="@+id/button5"
+        android:id="@+id/posts"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
